testfx/errors/error_tests/edge_07_for_keyword.fx
// 测试: 使用 for 关键字
for (i := 0; i < 10; i = i + 1) {
    println(i)
}
